--- a/#src/index.html
+++ b/#src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
 	<link rel="stylesheet" href="css/style.min.css">
 	<title>RunSmart</title>
 </head>
+
 <body>
 	<section class="promo promo-position">
 		<div class="background-image">
@@ -24,7 +26,7 @@
 					<div class="header__official-brends">Garmin, Polar, Suunto</div>
 				</div>
 				<div class="header__contacts">
-					<a href="tel:+74999228974" class="header__phone" >+7 (499) 922-89-74</a>
+					<a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
 					<button class="header__button button">заказать звонок</button>
 				</div>
 			</header>
@@ -66,36 +68,55 @@
 			<h2 class="advantages__title title">наши преимущества
 			</h2>
 			<div class="advantages__flex">
-					<div class="flex-item advantages__flex-item">
-						<div class="flex-item__img">
-							<img src="img/icon/cup.png" alt="cup">
-						</div>
-						<h3 class="flex-item__title">Делимся опытом</h3>
-						<div class="flex-item_text">Наши сотрудники всегда готовы поделиться своим опытом, 
-							так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+				<div class="flex-item advantages__flex-item">
+					<div class="flex-item__img">
+						<img src="img/icon/cup.png" alt="cup">
 					</div>
-					<div class="flex-item advantages__flex-item">
-						<div class="flex-item__img">
-							<img src="img/icon/heart.png" alt="cup">
-						</div>
-						<h3 class="flex-item__title">Заботимся о здоровье</h3>
-						<div class="flex-item_text">Мы работаем для того, 
-							чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+					<h3 class="flex-item__title">Делимся опытом</h3>
+					<div class="flex-item_text">Наши сотрудники всегда готовы поделиться своим опытом,
+						так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+				</div>
+				<div class="flex-item advantages__flex-item">
+					<div class="flex-item__img">
+						<img src="img/icon/heart.png" alt="cup">
 					</div>
-					<div class="flex-item advantages__flex-item">
-						<div class="flex-item__img">
-							<img src="img/icon/shoe.png" alt="cup">
-						</div>
-						<h3 class="flex-item__title">Учим бегать</h3>
-						<div class="flex-item_text">Помогаем с обучением 
-							правильной технике бега! 
-							Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a></div>
+					<h3 class="flex-item__title">Заботимся о здоровье</h3>
+					<div class="flex-item_text">Мы работаем для того,
+						чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+				</div>
+				<div class="flex-item advantages__flex-item">
+					<div class="flex-item__img">
+						<img src="img/icon/shoe.png" alt="cup">
 					</div>
+					<h3 class="flex-item__title">Учим бегать</h3>
+					<div class="flex-item_text">Помогаем с обучением
+						правильной технике бега!
+						Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a></div>
+				</div>
 			</div>
-
 		</div>
 	</section>
+	<section class="consultation">
+		<div class="background-image">
+			<div class="background-image__flex-element">
+				<img class="background-image__img" src="img/background/snikers.png" alt="">
+			</div>
+		</div>
+		<div class="container">
+			<h2 class="consultation__title title">Получите бесплатную консультацию<br>
+				по подбору пульсометра</h2>
+			<h2 class="consultation__subtitle">Просто заполните форму заявки
+				и мы перезвоним вам в течении 10 минут</h2>
+			<form class="feed-form" action="#">
+				<input name="name" required placeholder="Ваше имя" type="text">
+				<input name="phone" required placeholder="Ваш телефон" type="number">
+				<input name="email" required placeholder="Ваш E-mail" type="email">
+				<button class="button button_submit">заказать консультацию</button>
+			</form>
+		</div>
+	</section> 
 
 	<script src="js/script.min.js"></script>
 </body>
+
 </html>
