--- a/#src/index.html
+++ b/#src/index.html
@@ -115,6 +115,19 @@
 			</form>
 		</div>
 	</section> 
+	<section class="carusel">
+		<div class="carusel__inner">
+			<div>
+				<img src="img/swiper/watch1.png" alt="watch">
+			</div>
+			<div>
+				<img src="img/swiper/watch2.png" alt="watch">
+			</div>
+			<div>
+				<img src="img/swiper/watch3.png" alt="watch">
+			</div>
+		 </div>
+	</section>
 
 	<script src="js/script.min.js"></script>
 </body>
