--- a/#src/index.html
+++ b/#src/index.html
@@ -116,17 +116,19 @@
 		</div>
 	</section> 
 	<section class="carusel">
-		<div class="carusel__inner">
-			<div>
-				<img src="img/swiper/watch1.png" alt="watch">
+		<div class="container">
+			<div class="carusel__inner">
+				<div>
+					<img src="img/swiper/watch1.png" alt="watch">
+				</div>
+				<div>
+					<img src="img/swiper/watch2.png" alt="watch">
+				</div>
+				<div>
+					<img src="img/swiper/watch3.png" alt="watch">
+				</div>
 			</div>
-			<div>
-				<img src="img/swiper/watch2.png" alt="watch">
-			</div>
-			<div>
-				<img src="img/swiper/watch3.png" alt="watch">
-			</div>
-		 </div>
+		</div>
 	</section>
 
 	<script src="js/script.min.js"></script>
