--- a/#src/index.html
+++ b/#src/index.html
@@ -116,7 +116,7 @@
 		</div>
 	</section> 
 
-	<section class="carusel">
+	<div class="carusel">
 		<div class="container">
 			<div class="carusel__inner">
 				<div>
@@ -130,7 +130,37 @@
 				</div>
 			</div>
 		</div>
+	</div>
 
+	<section class="catalog">
+		<div class="container">
+			<h2 class="catalog__title title">Каталог пульсометров</h2>
+			<ul class="catalog__tabs">
+				<li class="catalog__tab catalog__tab_active"><div>Для фитнеса</div></li>
+				<li class="catalog__tab"><div>для бега</div></li>
+				<li class="catalog__tab"><div>для триатлона</div></li>
+			</ul>
+			
+			<div class="catalog__content">
+				<div class="catalog__item">
+					<img src="img/galery/wach1.png" alt="pulsometr" class="catalog-item__img">
+					<div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+					<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+					<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+					<hr>
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">4 500 руб.</div>
+							<div class="catalog-item__price">4 500 руб.</div>
+						</div>
+						<button class="catalog-item__btn">КУПИТЬ</button>
+					</div>
+
+				</div>
+			</div>
+			<div class="catalog__content"></div>
+			<div class="catalog__content"></div>
+		</div>
 	</section>
 
 	<script src="js/script.min.js"></script>
