--- a/#src/index.html
+++ b/#src/index.html
@@ -33,7 +33,7 @@
 				</div>
 				<div class="header__contacts">
 					<a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
-					<button class="header__button button">заказать звонок</button>
+					<button data-modal='consultation' class="header__button button">заказать звонок</button>
 				</div>
 			</header>
 			<div class="promo__flex-end">
@@ -71,7 +71,7 @@
 				</div>
 			</div>
 			<div class="promo__flex-end">
-				<button class="promo__button button">заказать консультацию</button>
+				<button data-modal='consultation' class="promo__button button">заказать консультацию</button>
 			</div>
 			<div class="promo__flex-end">
 				<a class="promo__link" href="#"> или <span>перейти в каталог</span></a>
@@ -210,7 +210,7 @@
 					<div class="catalog-item__wrapper">
 						<div class="catalog-item__content catalog-item">
 							<img src="img/galery/wach1.png" alt="pulsometr" class="catalog-item__img">
-							<h3 class="catalog-item__subtitle">Пульсометр Polar FT1</h3>
+							<h3 class="catalog-item__subtitle">Пульсометр Polar FT2</h3>
 							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме
 							</div>
 							<div class="catalog-item__link"><a href="#">ПОДРОБНЕЕ</a></div>
@@ -243,7 +243,7 @@
 					<div class="catalog-item__wrapper">
 						<div class="catalog-item__content catalog-item">
 							<img src="img/galery/wach1.png" alt="pulsometr" class="catalog-item__img">
-							<h3 class="catalog-item__subtitle">Пульсометр Polar FT1</h3>
+							<h3 class="catalog-item__subtitle">Пульсометр Polar FT3</h3>
 							<div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме
 							</div>
 							<div class="catalog-item__link"><a href="#">ПОДРОБНЕЕ</a></div>
@@ -535,7 +535,41 @@
 		</div>
 	</footer>
 
-	<div class="overlay"> </div>
+	<div class="overlay">
+		<div class="modal" id="consultation">
+			<div class="modal__close">&times</div>
+			<div class="modal__subtitle">Просто заполните форму заявки</div>
+			<div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
+			<form class="feed-form feed-form_mt25" action="#">
+				<input name="name" required placeholder="Ваше имя" type="text">
+				<input name="phone" required placeholder="Ваш телефон" type="number">
+				<input name="email" required placeholder="Ваш E-mail" type="email">
+				<button class="button button_submit">заказать консультацию</button>
+			</form>
+		</div>
+
+		<div class="overlay">
+			<div class="modal" id="order">
+				<div class="modal__close">&times</div>
+				<div class="modal__subtitle">Ваш заказ:</div>
+				<div class="modal__descr">Пульсометр Polar FT1</div>
+				<form class="feed-form feed-form_mt25" action="#">
+					<input name="name" required placeholder="Ваше имя" type="text">
+					<input name="phone" required placeholder="Ваш телефон" type="number">
+					<input name="email" required placeholder="Ваш E-mail" type="email">
+					<button class="button button_submit">Купить</button>
+				</form>
+			</div>
+
+			<div class="overlay">
+				<div class="modal modal_mini" id="thanks">
+					<div class="modal__close">&times</div>
+					<div class="modal__subtitle">Спасибо за вашу заявку!</div>
+					<div class="modal__descr">Наш менеджер свяжется с вами 
+						в ближайшее время!</div>
+				</div>
+
+	</div>
 
 	<script src="js/script.min.js"></script>
 </body>
