--- a/#src/index.html
+++ b/#src/index.html
@@ -131,7 +131,7 @@
 				по подбору пульсометра</h2>
 			<h2 class="consultation__subtitle">Просто заполните форму заявки
 				и мы перезвоним вам в течении 10 минут</h2>
-			<form class="feed-form" action="#">
+			<form id="consultation-form" class="feed-form" action="#">
 				<input name="name" required placeholder="Ваше имя" type="text">
 				<input name="phone" required placeholder="Ваш телефон" type="number">
 				<input name="email" required placeholder="Ваш E-mail" type="email">
@@ -541,9 +541,9 @@
 			<div class="modal__subtitle">Просто заполните форму заявки</div>
 			<div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
 			<form class="feed-form feed-form_mt25" action="#">
-				<input name="name" required placeholder="Ваше имя" type="text">
-				<input name="phone" required placeholder="Ваш телефон" type="number">
-				<input name="email" required placeholder="Ваш E-mail" type="email">
+				<input name="name" placeholder="Ваше имя" type="text">
+				<input name="phone" placeholder="Ваш телефон" type="number">
+				<input name="email" placeholder="Ваш E-mail" type="email">
 				<button class="button button_submit">заказать консультацию</button>
 			</form>
 		</div>
