--- a/#src/index.html
+++ b/#src/index.html
@@ -133,7 +133,7 @@
 				и мы перезвоним вам в течении 10 минут</h2>
 			<form id="consultation-form" class="feed-form" action="#">
 				<input name="name" required placeholder="Ваше имя" type="text">
-				<input name="phone" required placeholder="Ваш телефон" type="number">
+				<input name="phone" required placeholder="Ваш телефон">
 				<input name="email" required placeholder="Ваш E-mail" type="email">
 				<button class="button button_submit">заказать консультацию</button>
 			</form>
@@ -542,7 +542,7 @@
 			<div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
 			<form class="feed-form feed-form_mt25" action="#">
 				<input name="name" placeholder="Ваше имя" type="text">
-				<input name="phone" placeholder="Ваш телефон" type="number">
+				<input name="phone" placeholder="Ваш телефон">
 				<input name="email" placeholder="Ваш E-mail" type="email">
 				<button class="button button_submit">заказать консультацию</button>
 			</form>
@@ -555,7 +555,7 @@
 				<div class="modal__descr">Пульсометр Polar FT1</div>
 				<form class="feed-form feed-form_mt25" action="#">
 					<input name="name" required placeholder="Ваше имя" type="text">
-					<input name="phone" required placeholder="Ваш телефон" type="number">
+					<input name="phone" required placeholder="Ваш телефон">
 					<input name="email" required placeholder="Ваш E-mail" type="email">
 					<button class="button button_submit">Купить</button>
 				</form>
