Email php is ready

--- a/#src/index.html
+++ b/#src/index.html
@@ -535,6 +535,7 @@
 		</div>
 	</footer>
 
+	<!--modals-->
 	<div class="overlay">
 		<div class="modal" id="consultation">
 			<div class="modal__close">&times</div>
@@ -568,7 +569,8 @@
 					<div class="modal__descr">Наш менеджер свяжется с вами 
 						в ближайшее время!</div>
 				</div>
-
+			</div>
+		</div>
 	</div>
 
 	<script src="js/script.min.js"></script>
