--- a/#src/index.html
+++ b/#src/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="shortcut icon" type="image/icon" href="img/favikon/favicon.ico">
 	<title>RunSmart</title>
 </head>
 
@@ -115,10 +116,10 @@
 					<h2 class="consultation__subtitle">Просто заполните форму заявки
 						и мы перезвоним вам в течении 10 минут</h2>
 					<form id="consultation-form" class="feed-form wow fadeInUpBig wow animate__animated animate__fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.7s" action="#">
-						<input name="name" required placeholder="Ваше имя" type="text">
-						<input name="phone" required placeholder="Ваш телефон">
-						<input name="email" required placeholder="Ваш E-mail" type="email">
-						<button class="button button_submit">заказать консультацию</button>
+						<input name="name" placeholder="Ваше имя" type="text" required>
+						<input name="phone" placeholder="Ваш телефон" required>
+						<input name="email" placeholder="Ваш E-mail" type="email" required>
+						<button class="button button_submit" type='submit'>заказать консультацию</button>
 					</form>
 				</div>
 			</section>
@@ -502,10 +503,10 @@
 			<div class="modal__subtitle">Просто заполните форму заявки</div>
 			<div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
 			<form class="feed-form feed-form_mt25" action="#">
-				<input name="name" placeholder="Ваше имя" type="text">
-				<input name="phone" placeholder="Ваш телефон">
-				<input name="email" placeholder="Ваш E-mail" type="email">
-				<button class="button button_submit">заказать консультацию</button>
+				<input name="name" placeholder="Ваше имя" type="text" required>
+				<input name="phone" placeholder="Ваш телефон" required>
+				<input name="email" placeholder="Ваш E-mail" type="email" required >
+				<button class="button button_submit" type='submit'>заказать консультацию</button>
 			</form>
 		</div>
 
@@ -515,10 +516,10 @@
 				<div class="modal__subtitle">Ваш заказ:</div>
 				<div class="modal__descr">Пульсометр Polar FT1</div>
 				<form class="feed-form feed-form_mt25" action="#">
-					<input name="name" required placeholder="Ваше имя" type="text">
-					<input name="phone" required placeholder="Ваш телефон">
-					<input name="email" required placeholder="Ваш E-mail" type="email">
-					<button class="button button_submit">Купить</button>
+					<input name="name" placeholder="Ваше имя" type="text" required>
+					<input name="phone" placeholder="Ваш телефон" required>
+					<input name="email" placeholder="Ваш E-mail" type="email" required>
+					<button class="button button_submit" type='submit'>Купить</button>
 				</form>
 			</div>
 
